[package]
name = "polkadot-bulletin-chain-constants"
version = "0.1.0-dev"
description = "Runtime for the Polkadot Bulletin Chain"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/paritytech/polkadot-bulletin-chain/"

[dependencies]
smallvec = "1.8.0"

# Substrate
# frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
# sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
# sp-weights = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
# sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }

[features]
default = ["std"]
std = [
	# "frame-support/std",
	# "sp-core/std",
	# "sp-runtime/std",
	# "sp-weights/std"
	"polkadot-primitives/std",
	"polkadot-runtime-common/std",
]
